--- a/package.json
+++ b/package.json
@@ -34,18 +34,22 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    "test": "npm run compile && node ./node_modules/vscode/bin/test",
+    "format": "prettier --write **/*.{ts,json}"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/wboka/vscode-rst2html"
   },
   "devDependencies": {
-    "typescript": "^2.6.1",
-    "vscode": "^1.1.6",
-    "tslint": "^5.8.0",
+    "@types/mocha": "^2.2.42",
     "@types/node": "^7.0.43",
-    "@types/mocha": "^2.2.42"
+    "prettier": "1.17.1",
+    "tslint": "^5.8.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "typescript": "^2.6.1",
+    "vscode": "^1.1.34"
   },
   "dependencies": {
     "rst2html": "^1.0.4"
